--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,8 @@ lib_deps =
 	m5stack/M5StickCPlus2@^1.0.2
 	m5stack/M5Unified@^0.2.11
 	bblanchon/ArduinoJson @ ~6.21.0
-lib_ignore = DFRobot_GP8XXX  # <-- ДОБАВЬТЕ ЭТУ СТРОКУ
-; board_build.ldscript = eagle.flash.4m32.ld  # Заменили build_flags
+lib_ignore = DFRobot_GP8XXX  
+; board_build.ldscript = eagle.flash.4m32.ld
 build_flags = 
     -D CONFIG_MIC_ENABLED=0
 ;	-Wl,-Teagle.flash.4m32.ld 
